--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -1,6 +1,8 @@
 html, body{
     height:100%;
     width:100%;
+    margin: 0;
+    font-family: 'ZCOOL XiaoWei', serif;
     }
     
     /* Navigation CSS */
@@ -9,15 +11,16 @@ html, body{
       position: fixed;
       top:0%;
       display: flex;
-      justify-content: space-around;
+      justify-content: space-between;
       background: #FC440F;
-      font-size: 20px;
+      font-size: 2vw;
       font-weight: bold;
+      font-family: 'ZCOOL QingKe HuangYou', cursive;
     }
     #links{
         display: flex;
-        font-size: 20px;
-      margin: 5px;
+        font-size: 2vw;
+        margin: 2px;
     }
     .nav-link{
       color: #000;
@@ -43,16 +46,25 @@ html, body{
     #intro{
       font-size: 200%;
       color: red;
-      padding-top: 50px;
+      padding-top: 3vh;
       text-align: center;
+      
     }
-    .pics{
+    .pics-top{
         display: flex;
         justify-content: space-evenly;
+        margin-top: 5em;
+    }
+
+    .pics-bottom{
+        display: flex;
+        justify-content: space-evenly;
+        margin-bottom: auto;
     }
     .pic{
-        height: 300px;
-        width: 300px;
+        width: 30vw;
+        height: 30vh;
+        object-fit: fill;
         margin: 10px;
     }
     
@@ -67,11 +79,8 @@ html, body{
         width: 100%;
     }
     .write-up{
-        border: 6px solid white;
-        border-style: dashed;
+        padding: 70px 20px 30px 20px;
     }
-    
-    
     /*Facts Section CSS */
     #facts-section{
         background: #EF9CDA;
@@ -88,13 +97,14 @@ html, body{
         font-size: 200%;
         color: red;
         padding-top: 50px;
-        margin: 5%;
+        margin: 8%;
     }
     
-    
     #greeting-container {
-      margin-top: 20px;
-      border: 5px solid #555;
+      margin: 30px 20px 20px 30px;
+      padding: 10px;
+      border: 3px solid #555;
+      border-spacing: 30px;
       border-style: ridge;
     }
     
@@ -103,22 +113,21 @@ html, body{
         background: #FFDD4A;
         height: 100vh;
         text-align: center;
-        padding: 15px;
-        justify-content: center;
-        align-items: center;    
+        padding: 20px;  
+        flex-direction: column;
     }
     
     #project-pics{
         padding: 10px;
         display: flex;
-        flex-flow: row wrap;
+        flex-flow: row;
         justify-content: space-evenly;
     }
     
     #projects-text{
         color: black;
         font-size: 180%;
-        margin: 5%;
+        margin: 10%;
         padding-top: 20px;
     }
     
@@ -154,7 +163,7 @@ html, body{
     }
     
     #resume-icon{
-        width: 200px;
+        width: 15%;
+        height: 20%;
     }
-    
     
