--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -1,36 +1,74 @@
-html, body{
-    height:100%;
-    width:100%;
+* {
     margin: 0;
-    font-family: 'ZCOOL XiaoWei', serif;
-    }
-    
-    /* Navigation CSS */
-    #navbar{
-      width: 100%;
-      position: fixed;
-      top:0%;
-      display: flex;
-      justify-content: space-between;
-      background: #FC440F;
-      font-size: 2vw;
-      font-weight: bold;
-      font-family: 'ZCOOL QingKe HuangYou', cursive;
-    }
-    #links{
-        display: flex;
-        font-size: 2vw;
-        margin: 2px;
-    }
-    .nav-link{
-      color: #000;
-      padding: 8px 16px;
-    }
-    .nav-link:hover {
-      color: white;
-      background: #555;
-    }
-    
+    padding: 0;
+    box-sizing: border-box;
+    text-decoration: none;
+}
+
+
+/* Navigation CSS */
+
+.max-width {
+    max-width: 1300px;
+    padding: 0 80px;
+    margin: auto;
+}
+
+.navbar {
+    width: 100%;
+    position: fixed;
+    font-family: 'Ubuntu', sans-serif;
+    padding: 30px 0;
+    transition: all 0.3s ease;
+    z-index: 999;
+}
+
+.navbar.sticky {
+    padding: 30px 0;
+    background: #00b4d8;
+}
+
+.navbar .max-width {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.navbar .logo a,
+.navbar .logo {
+    font-size: 35px;
+    font-weight: 600;
+    color: white;
+}
+
+.navbar .links li {
+    list-style: none;
+    display: inline-block;
+}
+
+.navbar .links li a {
+    color: #fff;
+    font-size: 18px;
+    font-weight: 500;
+    margin-left: 25px;
+    transition: color 0.3s ease-in;
+}
+
+.navbar .links li a:hover {
+    color: #FC440F;
+}
+
+.navbar.sticky .logo .links li a:hover {
+    color: #fff;
+}
+
+.menu-bar {
+    color: #fff;
+    font-size: 23px;
+    cursor: pointer;
+    display: none;
+}
+
     /* Intro Section CSS */
     #intro-section{
       background-color: #0D3B66;
