--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -69,42 +69,38 @@
     display: none;
 }
 
-    /* Intro Section CSS */
-    #intro-section{
-      background-color: #0D3B66;
-      text-align: center;
-      padding-top: 0px;
-      margin-top: 0px;
-      height: 100vh;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-around;
-      width: 100%;
-    }
-    #intro{
-      font-size: 200%;
-      color: red;
-      padding-top: 3vh;
-      text-align: center;
-      
-    }
-    .pics-top{
-        display: flex;
-        justify-content: space-evenly;
-        margin-top: 5em;
-    }
+/* Intro Section CSS */
 
-    .pics-bottom{
-        display: flex;
-        justify-content: space-evenly;
-        margin-bottom: auto;
-    }
-    .pic{
-        width: 30vw;
-        height: 30vh;
-        object-fit: fill;
-        margin: 10px;
-    }
+.home-section {
+    background-color: #0D3B66;
+    display: flex;
+    height: 100vh;
+    font-family: 'Montserrat Alternates', sans-serif;
+    background: url("images/pic1.jpg") no-repeat center;
+    color: white;
+    min-height: 500px;
+    background-size: cover;
+    background-attachment: fixed;
+}
+
+.home-section .max-width {
+    margin: auto 0 auto 40px;
+}
+
+.home-section .content .text1 {
+    font-size: 27px;
+}
+
+.home-section .content .text2 {
+    font-size: 55px;
+    font-weight: 600;
+    margin-left: -3px;
+}
+
+.home-section .content .text3 {
+    font-size: 40px;
+    margin: 5px 0;
+}
     
     /* About Me Section CSS */
     #about-me{
