--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -1,8 +1,19 @@
+
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     text-decoration: none;
+}
+
+section {
+    color: white;
+    font-family: 'Montserrat Alternates', sans-serif;
+    background-size: cover;
+    background-attachment: fixed;
+    height: 100vh;
+    min-height: 500px;
 }
 
 
@@ -73,15 +84,14 @@
 /* Intro Section CSS */
 
 .home-section {
-    background-color: #0D3B66;
     display: flex;
-    height: 100vh;
-    font-family: 'Montserrat Alternates', sans-serif;
     background: url("images/pic1.jpg") no-repeat center;
     color: white;
-    min-height: 500px;
+    font-family: 'Montserrat Alternates', sans-serif;
     background-size: cover;
     background-attachment: fixed;
+    height: 100vh;
+    min-height: 500px;
 }
 
 .home-section .max-width {
@@ -106,17 +116,9 @@
 
 /* About Me Section CSS */
 
-section {
-    padding: 150px 0;
-}
-
 .about-section {
-    font-family: 'Montserrat Alternates', sans-serif;
+    padding: 110px 0;
     background: url("images/pic4.jpg") no-repeat center;
-    background-size: cover;
-    background-attachment: fixed;
-    height: 100vh;
-    min-height: 500px;
 }
 
 .about-section .title {
@@ -141,7 +143,8 @@ section {
     transform: translateX(-50%);
 }
 
-.about-section .about-content {
+.about-section .about-content,
+.skills-section .skills-content {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
@@ -157,20 +160,17 @@ section {
     font-weight: bold;
     color: #F7F3F3;
 }
-    
- 
+
+
 /*Facts Section CSS */
 
 .facts-section {
-    font-family: 'Ubuntu', sans-serif;
     background: url("images/pic2.jpg") no-repeat center;
-    background-size: cover;
-    background-attachment: fixed;
-    height: 100vh;
-    min-height: 500px;
+    padding: 110px 0;
 }
 
 .facts-section .facts-content {
+    font-family: 'Ubuntu', sans-serif;
     display: flex;
     flex-wrap: wrap;
     align-items: left;
@@ -213,32 +213,176 @@ section {
 }
 
 
-    /*Facts Section CSS */
-    #facts-section{
-        background: #EF9CDA;
-        text-align: center;
-        color: white;
-        height: 100vh;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        width: 100%;
+/* Skils Section CSS */
+
+.skills-section {
+    background: url("images/pic3.jpg") no-repeat center;
+    padding: 1.2rem;
+}
+
+.skills-content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-grow: 1;
+}
+
+.skills-section .head {
+    position: relative;
+    text-align: center;
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 40px;
+    font-weight: 700;
+    color: white;
+    padding-left: 80%;
+    padding-top: 10%;
+}
+
+.skills-section .head::before {
+    content: "";
+    position: absolute;
+    width: 140px;
+    left: 96%;
+    bottom: 0px;
+    height: 3px;
+    background: white;
+    transform: translateX(-50%);
+}
+
+.skills-section a {
+    display: inline-block;
+    background: steelblue;
+    color: white;
+    font-size: 20px;
+    padding: 10px 30px;
+    margin-top: 110px;
+    margin-left: 75%;
+    border-radius: 6px;
+    border: 2px solid steelblue;
+    transition: all 0.3s ease;
+}
+
+.skills-section a:hover {
+    color: steelblue;
+    background: none;
+}
+
+
+/*chart */
+
+ul {
+    list-style: none;
+}
+
+.chart-wrapper {
+    width: 95%;
+    max-width: 500px;
+    margin-top: 70px;
+    margin-left: 60%;
+}
+
+.chart-wrapper,
+.chart-wrapper .chart-skills li,
+.chart-wrapper .chart-levels li {
+    position: relative;
+}
+
+.chart-wrapper .chart-levels li {
+    flex-grow: 1;
+    border-right: 1px solid rgba(211, 211, 211, 0.3);
+}
+
+.chart-wrapper .chart-levels li span {
+    position: absolute;
+}
+
+.chart-wrapper .chart-skills span {
+    display: inline-block;
+    width: 120px;
+    padding: 15px;
+    font-weight: 500;
+}
+
+.chart-wrapper .chart-levels span {
+    bottom: 0;
+    transform: translateY(50px) rotate(45deg);
+    padding: 10px;
+    width: 100%;
+}
+
+.chart-wrapper .chart-levels {
+    display: flex;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    padding-left: 120px;
+}
+
+.chart-wrapper .chart-levels li:last-child {
+    border-right: 0;
+}
+
+.chart-wrapper .chart-skills li::before,
+.chart-wrapper .chart-skills li::after {
+    content: "";
+    position: absolute;
+    top: 25%;
+    left: 120px;
+    height: 50%;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    z-index: 2;
+}
+
+.chart-wrapper .chart-skills li::after {
+    width: calc(100% - 120px);
+    background: rgba(211, 211, 211, 0.3);
+}
+
+.chart-wrapper .chart-skills li::before {
+    width: 0;
+    background: #009dd3;
+    transition: width 0.65s ease-out;
+}
+
+.chart-wrapper.in-view .chart-skills li:nth-child(1)::before {
+    width: calc(85% - (120px));
+    transition-delay: 0.3s;
+}
+
+.chart-wrapper.in-view .chart-skills li:nth-child(2)::before {
+    width: calc(70% - 120px);
+    transition-delay: calc( 0.3s + 0.3s);
+}
+
+.chart-wrapper.in-view .chart-skills li:nth-child(3)::before {
+    width: calc(48% - 120px);
+    transition-delay: calc( (0.3s) + (0.3s) * 2);
+}
+
+.chart-wrapper.in-view .chart-skills li:nth-child(4)::before {
+    width: calc(85% - 120px);
+    transition-delay: calc( (0.3s) + (0.3s) * 3);
+}
+
+.chart-wrapper.in-view .chart-skills li:nth-child(5)::before {
+    width: calc(50% - 120px);
+    transition-delay: calc( (0.3s) + (0.3s) * 4);
+}
+
+@keyframes pulse {
+    0% {
+        transform: scaleY(1);
     }
-    
-    #inst{
-        font-size: 200%;
-        color: red;
-        padding-top: 50px;
-        margin: 8%;
+    50% {
+        transform: scaleY(0.65);
     }
-    
-    #greeting-container {
-      margin: 30px 20px 20px 30px;
-      padding: 10px;
-      border: 3px solid #555;
-      border-spacing: 30px;
-      border-style: ridge;
+    100% {
+        transform: scaleY(1);
     }
+}
     
     /*Projects Section CSS */
     #projects-section{
