--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -1,5 +1,3 @@
-
-
 * {
     margin: 0;
     padding: 0;
@@ -251,19 +249,19 @@ section {
 
 .skills-section a {
     display: inline-block;
-    background: steelblue;
+    background: #00b4d8;
     color: white;
     font-size: 20px;
     padding: 10px 30px;
     margin-top: 110px;
     margin-left: 75%;
     border-radius: 6px;
-    border: 2px solid steelblue;
+    border: 2px solid #00b4d8;
     transition: all 0.3s ease;
 }
 
 .skills-section a:hover {
-    color: steelblue;
+    color: #00b4d8;
     background: none;
 }
 
@@ -383,63 +381,223 @@ ul {
         transform: scaleY(1);
     }
 }
-    
-    /*Projects Section CSS */
-    #projects-section{
-        background: #FFDD4A;
+
+
+/*Projects Section CSS */
+
+.projects-section {
+    background-color: black;
+    padding: 100px 0;
+}
+
+.projects-section .title {
+    font-family: 'Ubuntu', sans-serif;
+    position: relative;
+    text-align: center;
+    font-size: 40px;
+    font-weight: 500;
+    margin-bottom: 60px;
+    padding-bottom: 20px;
+}
+
+.projects-section .title::before {
+    content: "";
+    position: absolute;
+    bottom: 0px;
+    left: 50%;
+    width: 200px;
+    height: 3px;
+    background: white;
+    transform: translateX(-50%);
+}
+
+.projects-section .projects-content {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.projects-section .projects-content .tile {
+    width: calc(33% - 20px);
+    background: #222;
+    text-align: center;
+    border-radius: 6px;
+    padding: 20px 25px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.projects-section .projects-content .tile i {
+    font-size: 50px;
+    color: #00b4d8;
+    transition: color 0.3s ease;
+}
+
+.projects-section .projects-content .tile:hover i {
+    color: #fff;
+}
+
+.projects-section .projects-content .tile .box {
+    transition: all 0.3s ease;
+}
+
+.projects-section .projects-content .tile:hover {
+    background: #00b4d8;
+}
+
+.projects-section .projects-content .tile:hover .box {
+    transform: scale(1.05);
+}
+
+.projects-section .projects-content .tile .text {
+    font-size: 25px;
+    font-weight: 500;
+    margin: 10px 0 7px 0;
+}
+
+
+/*Contact Section CSS */
+
+.contact-section {
+    background: url(images/pic5.jpg) no-repeat center;
+    height: 100vh;
+    padding: 15px;
+    justify-content: center;
+    align-items: flex-start;
+    background-size: cover;
+    background-attachment: fixed;
+    height: 100vh;
+    min-height: 500px;
+    display: flex;
+}
+
+.contact-section .c-content {
+    margin-left: 2%;
+    margin-right: 80%;
+    margin-top: 30%;
+}
+
+.contact-section .c-text {
+    font-family: 'Ubuntu', sans-serif;
+    position: relative;
+    text-align: center;
+    font-size: 40px;
+    font-weight: 500;
+    margin-bottom: 60px;
+    padding-bottom: 20px;
+}
+
+.contact-section .c-text::before {
+    content: "";
+    position: absolute;
+    bottom: 0px;
+    left: 50%;
+    width: 200px;
+    height: 3px;
+    background: white;
+    transform: translateX(-50%);
+}
+
+#contact-links {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 3rem;
+}
+
+.icon {
+    width: 170px;
+    height: 100%;
+    transition: all 0.3s ease;
+}
+
+.icon:hover {
+    transform: scale(1.05);
+}
+
+
+/* responsive media query code */
+
+@media (max-width: 1104px) {
+    .home-section .max-width {
+        margin-left: 0px;
+    }
+}
+
+@media (max-width: 991px) {
+    .max-width {
+        padding: 0 50px;
+    }
+}
+
+@media (max-width: 947px) {
+    .menu-bar {
+        display: block;
+        z-index: 999;
+    }
+    .menu-bar i.active:before {
+        content: "\f00d";
+    }
+    .navbar .links {
+        position: fixed;
         height: 100vh;
+        background: black;
+        width: 100%;
+        left: -100%;
+        top: 0;
         text-align: center;
-        padding: 20px;  
-        flex-direction: column;
+        padding-top: 80px;
+        transition: all 0.3s ease;
     }
-    
-    #project-pics{
-        padding: 10px;
-        display: flex;
-        flex-flow: row;
-        justify-content: space-evenly;
+    .navbar .links.active {
+        left: 0;
     }
-    
-    #projects-text{
-        color: black;
-        font-size: 180%;
-        margin: 10%;
-        padding-top: 20px;
+    .navbar .links li {
+        display: block;
     }
-    
-    
-    .project-tile{
-        width: 300px;
+    .navbar .links li a {
+        display: inline-block;
+        margin: 20px 0;
+        font-size: 25px;
     }
-    
-    /*Contact Section CSS */
-    #contact-section{
-      background: #1EFFBC;
-      text-align: center;
-      height: 100vh;
-      padding: 15px;
-      justify-content: center;
-      align-items: center;
+    .home-section .content .text2 {
+        font-size: 70px;
     }
-    #contact-text, #resume-text{
-      font-family: Bradley Hand, cursive;
-      font-size: 250%;
-      font-weight: bold;
-      margin: 5%;
-      padding-top: 20px;
+    .home-section .content .text3 {
+        font-size: 35px;
     }
-    #contact-links{
-      display:flex;
-      justify-content: space-around;
-      margin-top: 3rem;
+    .about-section .about-content .right {
+        font-size: 4%;
     }
-    .icon{
-      width:170px;
-      height:100%;
+    .about-section .title::before {
+        left: 87%;
     }
-    
-    #resume-icon{
-        width: 15%;
-        height: 20%;
+    .max-width {
+        max-width: 800px;
     }
-    
+    .projects-section .projects-content .tile {
+        width: calc(50% - 10px);
+        margin-bottom: 20px;
+    }
+}
+
+@media (max-width: 690px) {
+    .max-width {
+        padding: 0 23px;
+    }
+    .home-section .content .text2 {
+        font-size: 60px;
+    }
+    .home-section .content .text3 {
+        font-size: 32px;
+    }
+    .projects-section .projects-content .tile {
+        width: 100%;
+    }
+}
+
+@media (max-width: 500px) {
+    .home-section .content .text2 {
+        font-size: 50px;
+    }
+}
