--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -122,19 +122,19 @@ section {
 .about-section .title {
     position: relative;
     font-family: 'Ubuntu', sans-serif;
-    text-align: right;
     font-size: 40px;
     font-weight: 700;
     margin-bottom: 60px;
     padding-bottom: 10px;
-    color: white;
+    color: #00b4d8;
+    transition: color 0.3s ease;
 }
 
 .about-section .title::before {
     content: "";
     position: absolute;
     width: 180px;
-    left: 92%;
+    left: 50%;
     bottom: 0px;
     height: 3px;
     background: white;
@@ -147,10 +147,17 @@ section {
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
+    flex-direction: column;
+    align-content: flex-end;
 }
 
 .about-section .about-content .right {
+    flex-direction: column;
     width: 40%;
+    background: #222;
+    text-align: center;
+    border-radius: 6px;
+    padding: 20px 25px;
 }
 
 .about-section .about-content .right p {
@@ -184,11 +191,14 @@ section {
     padding-right: 3%;
     align-items: center;
     justify-content: space-evenly;
-    border-style: dashed;
     display: flex;
     flex-direction: column;
     margin-left: -5%;
     margin-top: -5%;
+    background: #222;
+    text-align: center;
+    border-radius: 6px;
+    padding: 20px 25px;   
 }
 
 .facts-section .facts-content .left p {
