--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -195,10 +195,10 @@ section {
     flex-direction: column;
     margin-left: -5%;
     margin-top: -5%;
-    background: #222;
+background: #222;
     text-align: center;
     border-radius: 6px;
-    padding: 20px 25px;   
+    padding: 20px 25px;  
 }
 
 .facts-section .facts-content .left p {
@@ -208,16 +208,43 @@ section {
     color: #F7F3F3;
     font-size: 1.563rem;
 }
+.facts-section .facts-content button {
+    background-color: transparent;
+    border: 2px solid #00b4d8;
+    border-radius: 0.6em;
+    color: #00b4d8;
+    cursor: pointer;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1;
+    margin: 20px;
+    padding: 1.2em 2.8em;
+    -webkit-transition: box-shadow 300ms ease-in-out, color 300ms ease-in-out;
+    transition: box-shadow 300ms ease-in-out, color 300ms ease-in-out;
+}
+.facts-section .facts-content button:hover, .facts-section .facts-content button:focus{
+    color: #fff;
+  outline: 0;
+} 
+.facts-section .facts-content button:hover{
+    box-shadow: 0 0 40px 40px #00b4d8 inset;
+}
 
-#greeting-container {
+#response-container {
     margin: 1.875rem 1.25rem 0px 1.875rem;
-    padding: 40px;
-    border: 3px solid #555;
-    border-spacing: 1.25rem;
-    border-style: ridge;
+    background: #222;
     text-align: center;
-    color: white;
+    border-radius: 6px;
+    padding: 20px 25px;
+    cursor: pointer;
+    transition: all 0.3s ease;
     font-family: 'Montserrat Alternates', sans-serif;
+    transition: all 0.3s ease;
+}
+
+#response-container:hover {
+    background: #00b4d8;
+    transform: scale(1.05);
 }
 
 
